--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -100,7 +100,7 @@
 	        <td>
 	          <div class="corp-submenu-item">
 	            <a th:href="@{/corp/info/edit}"><span class="corp-submenu-link">기업 정보 수정</span></a><br>
-	            <a href="#void"><span class="corp-submenu-link">이미지 등록</span></a><br>
+	            <a th:href="@{/corp/image}"><span class="corp-submenu-link">이미지 등록</span></a><br>
 	            <a href="#void"><span class="corp-submenu-link">비밀번호 변경</span></a>
 	          </div>
 	        </td>
