--- a/src/main/resources/templates/admin/admin_register.html
+++ b/src/main/resources/templates/admin/admin_register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>관리자 회원가입</title>
-  <link rel="stylesheet" th:href="@{admin/admin_register.css}"> 
+  <link rel="stylesheet" th:href="@{admin/css/admin_register.css}"> 
   <style>
    
   </style>
@@ -273,7 +273,7 @@
             success: function(response) {
                 console.log('서버 응답:', response);
                 alert('회원가입이 완료되었습니다!');
-                window.location.href = '/admin_login';
+                window.location.href = '/admin/admin_login';
             },
             error: function(xhr, status, error) {
                 console.error("회원가입 실패:", error);
@@ -331,10 +331,6 @@
             <option value="gmail.com">gmail.com</option>
             <option value="naver.com">naver.com</option>
             <option value="daum.net">daum.net</option>
-            <option value="kakao.com">kakao.com</option>
-            <option value="yahoo.com">yahoo.com</option>
-            <option value="hotmail.com">hotmail.com</option>
-            <option value="outlook.com">outlook.com</option>
           </select>
           <button type="button" class="check-btn" id="checkIdBtn">이메일 인증받기</button>
         </div>
@@ -377,10 +373,9 @@
         <label for="dept">부서</label>
         <select id="dept" name="dept">
           <option value="">선택하세요</option>
-          <option value="고객센터팀">고객센터팀</option>
-          <option value="기업팀">기업팀</option>
-          <option value="인사팀">인사팀</option>
-          <option value="기획팀">기획팀</option>
+          <option value="CUSTOMER_SERVICE">고객센터팀</option>
+          <option value="MEMBER_MANAGEMENT">회원관리팀</option>
+          <option value="CORPORATE">기업관리팀</option>
         </select>
         <small class="input-help">부서를 선택해주세요.</small>
         <small class="error-msg" id="dept_error"></small>
@@ -397,11 +392,10 @@
         <label for="job">직급</label>
         <select id="job" name="job">
           <option value="">선택하세요</option>
-          <option value="사원">사원</option>
-          <option value="대리">대리</option>
-          <option value="과장">과장</option>
-          <option value="팀장">팀장</option>
-          <option value="임원">임원</option>
+          <option value="EMPLOYEE">사원</option>
+          <option value="ASSISTANT_MANAGER">대리</option>
+          <option value="MANAGER">과장</option>
+          <option value="TEAM_LEADER">팀장</option>
         </select>
         <small class="input-help">직급을 선택해주세요.</small>
         <small class="error-msg" id="job_error"></small>
