--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -33,10 +33,10 @@
 		      <a th:href="@{/void}" th:text="${user.name}" class="corp-header-link" style="color: #1abc9c; text-decoration: underline;" onclick="alert('마이페이지 링크입니다.')" ></a> |
 		      <a th:href="@{/logout}" class="corp-header-link">로그아웃</a> |
 		      <a th:href="@{/void}" class="corp-header-link">고객센터</a>
-					<!-- SercurityContext에서 가져와, (java의 .toString()으로 변환된) CustomUser객체를 저장   -->
-		      <div id="userEmail" th:attr="data-user=${user.email}"></div>
-		      <div id="userRole" th:attr="data-user=${user.role}"></div>
-		      <div id="userCorpNo" th:attr="data-user=${user.corpNo}"></div>
+		      <input type="hidden" id="userEmail" th:value="${user.email}" >
+		      <input type="hidden" id="userRole" th:value="${user.role}" >
+		      <input type="hidden" id="userCorpNo" th:value="${user.corpNo}" >
+		      <div id="userInfo" th:attr="data-user=${user}" ></div>
 	    	</div>
 	    	<!-- sec:authorize는 내부적으로 SecurityContext에서 현재 사용자의 인증 상태를 확인 : 비로그인 상태인 경우, 내부적으로 ROLE_ANONYMOUS 권한이 부여, 따라서 오류 안남 -->
 	    	<div sec:authorize="!hasRole('ROLE_CORP')"  >
